<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_app" />

    <Button
        android:id="@+id/btn_register_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/btn_login_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_bleConnexion_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bleConnexion"
        android:background="@drawable/rounded_button"/>

</LinearLayout>